# frank-monorepo-libs

./: LICENSE.md  README.md  pyproject.toml
frank_libs/: models.py
frank_libs/db/: crud.py  models.py
frank_libs/dialogue_tree/: interpreter.py  nodes.py  serde.py  tree.py
frank_libs/vos/: vos.py
